<resources>
    <string name="app_name">Programadores</string>
    <string name="app_version" translatable="false">1.1.1</string>
    <string name="default_google_web_client_id" translatable="false">781049805208-62rffq36rhs5hca0qsh616oui4eeem79.apps.googleusercontent.com</string>
    <string name="facebook_app_id" translatable="false">1781345812193019</string>
    <string name="app_email">pedromassango.developer@gmail.com</string>
    <string name="about_app">Sobre Programmers</string>
    <string name="app_developer">Por: Pedro Massango</string>
    <string name="app_description">Programmers é um aplicativo desenvolvido por Pedro Massango, com o objectivo de jutar os desenvolvedores de todo mundo, e manter uma relação entre sí.\n\nPartilhar conhecimento, e ajudar nas resoluções de problemas mais comúns bem como os mais complexos.\n\nEsta é a primeira versão (beta), o sistema ainda conta com alguns Bugs, se verificar alguns, não exite em reportar.\n\nVisite a página no facebook, e conta-me a sua experiência. Obrigado!</string>
    <string name="app_developed_and_designed">Desenvolvido e Desenhado por: \n Pedro Massango.</string>
    <string name="intro_one_title">Bem-vindo ao Programmers</string>
    <string name="intro_one_description">Um aplicativo feito específicamente para programadores/desenvolvedores e amantes das tecnologias.</string>
    <string name="intro_two_title">Está com dúvidas? Peça ajuda.</string>
    <string name="intro_two_description">Junte-se a colegas de profissão. E aprenda com eles, tirando dúvidas do que precisar.</string>
    <string name="intro_tree_title">Ajude, partilhe seu conhecimento.</string>
    <string name="intro_tree_description">Um lugar onde todos ajudam e são ajudados. Quanto mais ajudar maior a reputação e mais sólido será seu conhecimento.</string>
    <string name="intro_four_title">Começe criando uma conta.</string>
    <string name="intro_four_description">Ou entre com alguns serviços disponíveis, para login.</string>
    <string name="funtionality_off">Funcionalidade de mensagem indisponível!</string>
    <string name="beginner">Iniciante</string>
    <string name="amauter">Amador</string>
    <string name="professional">Profissional</string>
    <string name="expert">Expert</string>
    <string name="drawer_open">Aberto</string>
    <string name="drawer_close">Fechado</string>
    <string name="contacts">Contactos</string>
    <string name="others_info">Outras informações</string>
    <string name="age">Idade</string>
    <string name="gender">Gênero</string>
    <string name="country">País</string>
    <string name="city">Cidade</string>
    <string name="energy">Energia</string>
    <string name="level">Nível</string>
    <string name="btn_save_activity_edit_profile">Salvar</string>
    <string name="phone">Telefone</string>
    <string name="email">E-mail</string>
    <string name="language">Linguagem</string>
    <string name="platform">Plataforma</string>
    <string name="password">Palavra-passe</string>
    <string name="entrar">Entrar</string>
    <string name="haveAccount">Já estou cadastrado.</string>
    <string name="home_page">Todas</string>
    <string name="developers">Desenvolvedores</string>
    <string name="terminar_sess_o">Terminar sessão</string>
    <string name="publish">Publicar</string>
    <string name="publishing">Publicando…</string>
    <string name="str_ok">OK</string>
    <string name="something_was_wrong">Algo de errado aconteceu. Tente novamente.</string>
    <string name="str_cancel">CANCELAR</string>
    <string name="dialog_logout_title">Deseja realmente sair ?</string>
    <string name="dialog_logout_description">Será necessário login, da proxima vez que entrar!</string>
    <string name="str_quiting">Terminando sessão…</string>
    <string name="title">Título</string>
    <string name="str_select">Selecione</string>
    <string name="str_login_error_title">Falha no login</string>
    <string name="error">Falha</string>
    <string name="a_carregar">A carregar…</string>
    <string name="publicar">PUBLICAR</string>
    <string name="comment">Comentar</string>
    <string name="like">Curtir</string>
    <string name="selecione_uma_imagem">Selecione uma imagem</string>
    <string name="autenticando">Autenticando…</string>
    <string name="email_invalido">Digite um email válido.</string>
    <string name="por">Por:</string>
    <string name="postagens">Postagens</string>
    <string name="mostrar_mais">Mostrar mais</string>
    <string name="mostrar_menos">Mostrar menos</string>
    <string name="cidade">Cidade</string>
    <string name="cadastrando">Cadastrando…</string>
    <string name="empty_username">Nome de usuário vazio</string>
    <string name="empty_password">Digite uma senha válida</string>
    <string name="empty_email">Digite um email</string>
    <string name="empty_text">Digite alguma coisa</string>
    <string name="nome_completo">Nome completo</string>
    <string name="empty_phone">Digite um numero de telefone</string>
    <string name="empty_city">Digite o nome da cidade</string>
    <string name="empty_title">Digite um título</string>
    <string name="empty_description">Necessário uma descrição</string>
    <string name="password_2">Repita a palavra-passe</string>
    <string name="empty_password_2">Re-digite a palavra-passe</string>
    <string name="password_less_than_eight">Mínimo 8 digitos, máximo 14</string>
    <string name="password_dont_match">Palavra-passe não conscide com a primeira</string>
    <string name="incorrect_email">Digite um e-mail válido</string>
    <string name="outras_informa_es">Outras informações</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="action_mark_util">Marcar como útil</string>
    <string name="action_delete_comment">Eliminar comentário</string>
    <string name="action_unmark_util">Desmarcar como útil</string>
    <string name="comment_deleted_successfull">Comentário eliminado</string>
    <string name="deleting_comment">Eliminando comentário…</string>
    <string name="comment_unmarking">Desmarcando…</string>
    <string name="comment_marking">Marcando…</string>
    <string name="action_delete">Eliminar</string>
    <string name="action_edit">Editar</string>
    <string name="action_deative_comments">Desativar comentários</string>
    <string name="action_ative_comments">Ativar comentários</string>
    <string name="deleting_post">Eliminado publicação…</string>
    <string name="post_deleted_successfull">Publicação eliminada!</string>
    <string name="done">Concluído</string>
    <string name="getting_user_info">Preparando infomações…</string>
    <string name="no_changes_maked_in_edit_post">Sem alterações feitas. Faça alterações para salvar!</string>
    <string name="updating_post">Actualizando publicação…</string>
    <string name="incorrect_phone_number">Número de telefone inválido</string>
    <string name="about">Sobre</string>
    <string name="bug_repport">Reportar problema</string>
    <string name="bug_repport_info">Descreva detalhadamente oque aconteceu de errado para que possa se resolver o problema.</string>
    <string name="less_description">Mínimo 15 carácteres.</string>
    <string name="sending_bug">Enviando…</string>
    <string name="send">Enviar</string>
    <string name="internet_connection_error">Impossível conectar com o servidor!</string>
    <string name="internet_connection_error_description">Não foi possível estabelecer conexão com servidor.Verifique sua conexão com a internet e tente novamente.</string>
    <string name="try_again">Tentar novamente</string>
    <string name="quit">Sair</string>
    <string name="get_user_info_error">Falha ao obter informações do usuário. Verifique sua conexão com a internet, e tente novamente.</string>
    <string name="empty_bug_description">Diga oque aconteceu de errado</string>
    <string name="on_facebook">Página no facebook</string>
    <string name="open_with">Abrir com</string>
    <string name="updating_profile">Actualizando perfil…</string>
    <string name="title_activity_edit_profile">Actualizar perfil</string>
    <string name="seus_posts_estar_o_aqui">Seus posts estarão aqui.</string>
    <string name="search">Procurar</string>
    <string name="searching">Procurando…</string>
    <string name="search_hint">Procurar Publicação</string>
    <string name="delete_history">Eliminar histórico de pesquisa</string>
    <string name="search_history_deleted">Histórico de pesquisa eliminado</string>
    <string name="search_not_found">Sem resultados.</string>
    <string name="reset_password_info">Digite seu E-mail para receber instruções de configuração de uma nova palavra-passe.</string>
    <string name="developer">Desenvolvedor</string>
    <string name="share">Partilhar</string>
    <string name="sending">Enviando</string>
    <string name="email_verification_success_message">Verifica a caixa de entrada do seu e-mail, e siga os passos para alterar sua palavra-passe!</string>
    <string name="email_verification_success_title">Enviado</string>
    <string name="forget_password">Equeceu a palavra-passe?</string>
    <string name="terms_adn_conditions_info">Termos e condições.</string>
    <string name="bug_repport_alert">Enviar juntamente com minha identificação para ser notificado assim que o problema for resolvido (recomendado).</string>
    <string name="delete_post_title">Elimiar publicação</string>
    <string name="delete_post_message">Deseja realmente eliminar esta publicação?\\nNão é possível reverter esta acção.</string>
    <string name="say_someting">Escreva alguma coisa…</string>
    <string name="notifications">Notificações</string>
    <string name="vibrate">Vibrar</string>
    <string name="donate_title">Doar</string>
    <string name="rate">Avaliar aplicativo</string>
    <string name="job_title">Emprego</string>
    <string name="link_title">Link</string>
    <string name="post_title">Publicação</string>
    <string name="donate_description">Programmers é gratuito. Ajude com um donativo.</string>
    <string name="system_settings">DEFINIÇÔES DE SISTEMA</string>
    <string name="end_session">Terminar sessão</string>
    <string name="privacy_police">Política de Privacidade</string>
    <string name="updates">Actualizações</string>
    <string name="general_settings">GERAIS</string>
    <string name="update">Actualizar</string>
    <string name="version">Versão</string>
    <string name="feedback">Feedback</string>
    <string name="send_me_an_email">Envie-me um email</string>
    <string name="check_automaticaly">Verificação automática</string>
    <string name="check_for_updates_automaticaly_summary">Verificar novas actualizações de acordo com o calendário.</string>
    <string name="settings">Definições</string>
    <string name="new_nersion_summary_off">Não receberá alertas sobre novas versõesdo app.</string>
    <string name="new_nersion_summary_on">Será apresentado alertas sempre houver uma nova versão do app (recomendado).</string>
    <string name="send_with">Enviar com</string>
    <string name="tell_me_if_you_find_a_bug">Diz-me se você encontrou algum problema</string>
    <string name="make_an_donation">Doar projeto</string>
    <string name="we_are_on_facebook">Visite, curte e comente sobre o app.</string>
    <string name="selecione_a_categoria_da_vaga">Selecione uma categoria</string>
    <string name="str_empregador_name">Nome do empregador</string>
    <string name="trabalhadores_remoto">Trabalho remoto</string>
    <string name="anos_de_experi_ncia_opcional">Anos de experiência (opcional)</string>
    <string name="share_this_app">Partilhar este app</string>
    <string name="account_settings">CONTA</string>
    <string name="new_password">Alterar senha</string>
    <string name="criar_conta">Criar conta</string>
    <string name="cargos_requeridos">Cargos requeridos</string>
    <string name="ou">OU</string>
    <string name="chat">Bate-papo</string>
</resources>